OpenApi Structure changes
